--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,3 +1,8 @@
-<html>
-<body> <h1> Hello Azure <h1> </body>
-</html>
+﻿@{
+    Page.Title = "Welcome!";
+}
+
+<p>
+    Welcome to the personal site template! To get started, click any of the 
+    menu items for additional setup instructions.
+</p>
