Add Current time to the default page

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -6,3 +6,7 @@
     Welcome to the personal site template! To get started, click any of the 
     menu items for additional setup instructions.
 </p>
+
+<p>
+    Current Time: @DateTime.Now
+</p>
